# mantis_factory

./: .gitignore  CMakeLists.txt  README.md
include/: assembly_line.h  definitions.h  factory.h  helpers.h  line_configurator.h  station.h
src/: assembly_line.cpp  factory.cpp  helpers.cpp  line_configurator.cpp  main.cpp  station.cpp
